# cell-kn-schema

./: .gitignore  Makefile  ckn-schema.yaml  pyproject.toml
.github/workflows/: publish.yml
src/ckn_schema/: __init__.py
src/ckn_schema/jsonschema/: __init__.py  ckn_schema.json
src/ckn_schema/pydantic/: __init__.py  ckn_schema.py
src/ckn_schema/schema/: __init__.py  ckn_schema.yaml
src/ckn_schema/shacl/: __init__.py  ckn_schema.shacl.ttl
