[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ckn-schema"
version = "0.1.7"
description = "LinkML data model for cell phenotypes and biological entities."
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "linkml-runtime>=1.9,<2",
]

[project.optional-dependencies]
dev = [
    "linkml>=1.8,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ckn_schema"]

[tool.hatch.build.targets.wheel.force-include]
"src/ckn_schema/schema/ckn_schema.yaml" = "ckn_schema/schema/ckn_schema.yaml"
"src/ckn_schema/shacl/ckn_schema.shacl.ttl" = "ckn_schema/shacl/ckn_schema.shacl.ttl"
"src/ckn_schema/jsonschema/ckn_schema.json" = "ckn_schema/jsonschema/ckn_schema.json"
